# service_linker

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  makefile  pyproject.toml
service_linker/: __init__.py  adapter.py  core.py
service_linker/adapters/: __init__.py  elasticsearch_adapter.py  kafka_consumer_adapter.py  kafka_producer_adapter.py  mongo_adapter.py  mysql_raw_adapter.py  redis_adapter.py
